"fixed" spacing

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h6{
 
 #projects{
     position: absolute;
-    top: 210%;
+    top: 220%;
     margin: 20px;
     padding: 40px;
     background-color: rgba(0,0,0,0.5);
@@ -170,7 +170,7 @@ h6{
 
 #skills{
     position: absolute;
-    top: 310%;
+    top: 320%;
     margin: 20px;
     padding: 40px;
     background-color: rgba(0,0,0,0.5);
@@ -203,7 +203,7 @@ h6{
 
 #contact{
     position: absolute;
-    top: 410%;
+    top: 420%;
     margin: 20px;
     padding: 40px;
     text-align: center;
